--- a/public/useful-links/index.html
+++ b/public/useful-links/index.html
@@ -74,7 +74,8 @@
     }
 
     nav a {
-      color: var(--white);
+      color: #1f4e79;
+      font-weight: bold;
       text-decoration: none;
       padding: 6px 10px;
       border-radius: var(--radius-pill);
