--- a/public/index.html
+++ b/public/index.html
@@ -386,7 +386,7 @@
         const role = data.authRole;
 
         if (role === "admin" || role === "viewer") {
-          window.location.href = "/calendar";
+          window.location.href = "/home";
         } else {
           window.location.href = "/under-review/";
         }
