--- a/public/calendar/index.html
+++ b/public/calendar/index.html
@@ -74,7 +74,8 @@
     }
 
     nav a {
-      color: var(--white);
+      color: #1f4e79;
+      font-weight: bold;
       text-decoration: none;
       padding: 6px 10px;
       border-radius: var(--radius-pill);
@@ -82,7 +83,7 @@
       backdrop-filter: blur(4px);
       opacity: 0.9;
     }
-
+    
     nav a:hover {
       opacity: 1;
       background: rgba(255, 255, 255, 0.12);
