--- a/public/documents/index.html
+++ b/public/documents/index.html
@@ -312,7 +312,7 @@
 <body>
   <header>
     <div>
-      <a href="/" class="troop-home-link">
+      <a href="/home" class="troop-home-link">
         <h2>Troop 248</h2>
       </a>
     </div>
