--- a/public/scoutmaster/index.html
+++ b/public/scoutmaster/index.html
@@ -305,7 +305,7 @@
 <body>
   <header>
     <div>
-      <a href="/" class="troop-home-link">
+      <a href="/home" class="troop-home-link">
         <h2>Troop 248</h2>
       </a>
     </div>
