--- a/public/documents/index.html
+++ b/public/documents/index.html
@@ -323,6 +323,7 @@
       <a href="/scoutmaster">Scoutmaster Blog</a>
       <a href="/spl-blog">SPL Blog</a>
       <a href="/useful-links">Useful Links</a>
+      <a href="/events">Events</a>
     </nav>
 
     <div id="auth-bar">
