--- a/public/home/index.html
+++ b/public/home/index.html
@@ -274,6 +274,7 @@
       <a href="/scoutmaster">Scoutmaster Blog</a>
       <a href="/spl-blog">SPL Blog</a>
       <a href="/useful-links">Useful Links</a>
+      <a href="/events">Events</a>
     </nav>
 
     <div id="auth-bar">
