--- a/public/spl-blog/index.html
+++ b/public/spl-blog/index.html
@@ -316,6 +316,7 @@
       <a href="/scoutmaster">Scoutmaster Blog</a>
       <a href="/spl-blog">SPL Blog</a>
       <a href="/useful-links">Useful Links</a>
+      <a href="/events">Events</a>
     </nav>
 
     <div id="auth-bar">
