--- a/public/home/index.html
+++ b/public/home/index.html
@@ -350,6 +350,16 @@
           </div>
         </a>
 
+        <a href="/events" class="feature-card-link">
+          <div class="feature-card">
+            <div class="feature-badge">Campouts/Service</div>
+            <h3 class="feature-title">Events</h3>
+            <p class="feature-text">
+              View and prepare for upcoming events.
+            </p>
+          </div>
+        </a>
+
       </div>
 
       <div class="quick-note">
