--- a/public/useful-links/index.html
+++ b/public/useful-links/index.html
@@ -398,7 +398,7 @@
             <option value="High Adventure">High Adventure</option>
             <option value="Merit Badges">Merit Badges</option>
             <option value="Parent Resources">Parent Resources</option>
-            <option value="BSA National">BSA National</option>
+            <option value="BSA Organizational Links">BSA Organizational Links</option>
             <option value="Other">Other</option>
           </select>
         </div>
