--- a/public/documents/index.html
+++ b/public/documents/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Troop Documents — Troop 248</title>
+  <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
