--- a/public/documents/index.html
+++ b/public/documents/index.html
@@ -347,6 +347,28 @@
     <section>
       <h2>Manage Documents</h2>
       <form id="doc-form" class="admin-only">
+        <!-- Drag & Drop Upload (Admins only) -->
+<div class="admin-only" style="margin-bottom: 14px;">
+  <h3>Upload a File</h3>
+  <div id="upload-dropzone" 
+       style="
+        border: 2px dashed rgba(148,163,184,0.9);
+        border-radius: 12px;
+        padding: 18px;
+        background: #f9fafb;
+        text-align: center;
+        cursor: pointer;
+       ">
+    <p style="margin: 0 0 4px; font-size: 14px;">
+      Drag & drop PDFs, images, or other files here
+    </p>
+    <p style="margin: 0; font-size: 12px; color: #6b7280;">
+      or click to choose a file from your device
+    </p>
+    <p id="upload-status" style="margin-top: 6px; font-size: 12px; color: #6b7280;"></p>
+  </div>
+  <input type="file" id="upload-file-input" style="display:none;" />
+</div>
         <h3>Add Document</h3>
         <div class="field">
           <label for="doc-title">Title</label>
@@ -390,6 +412,13 @@
       serverTimestamp
     } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
+    import {
+    getStorage,
+    ref,
+    uploadBytesResumable,
+    getDownloadURL
+  } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-storage.js";
+
     const firebaseConfig = {
       apiKey: "AIzaSyD5qUHa2JuQ3iI7U3DrX7JDyhx76PGzhxM",
       authDomain: "troop-248.firebaseapp.com",
@@ -403,6 +432,8 @@
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
+    const storage = getStorage(app);
+
 
     const authInfoEl = document.getElementById("auth-info");
     const logoutBtn = document.getElementById("logout-btn");
@@ -415,6 +446,10 @@
     const docTitleInput = document.getElementById("doc-title");
     const docUrlInput = document.getElementById("doc-url");
     const docDescInput = document.getElementById("doc-description");
+
+    const uploadDropzone = document.getElementById("upload-dropzone");
+    const uploadFileInput = document.getElementById("upload-file-input");
+    const uploadStatusEl = document.getElementById("upload-status");
 
     let currentUser = null;
     let currentIsAdmin = false;
@@ -459,6 +494,103 @@
       updateAdminUI();
       pageSpecificInit();
     }
+
+      function setUploadStatus(text, color = "#6b7280") {
+    if (!uploadStatusEl) return;
+    uploadStatusEl.textContent = text;
+    uploadStatusEl.style.color = color;
+  }
+
+  async function uploadFileToStorage(file) {
+    if (!file) return;
+
+    // Simple size check (20 MB max, you can change this)
+    const maxSizeBytes = 20 * 1024 * 1024;
+    if (file.size > maxSizeBytes) {
+      setUploadStatus("File too large (max 20 MB).", "#b91c1c");
+      return;
+    }
+
+    try {
+      setUploadStatus(`Uploading "${file.name}"...`);
+
+      // Path in Storage, e.g. documents/1699999999_filename.pdf
+      const timestamp = Date.now();
+      const cleanName = file.name.replace(/[^\w.\-]+/g, "_");
+      const storageRef = ref(storage, `documents/${timestamp}_${cleanName}`);
+
+      const uploadTask = uploadBytesResumable(storageRef, file);
+
+      uploadTask.on("state_changed",
+        (snapshot) => {
+          const progress = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
+          setUploadStatus(`Uploading... ${progress.toFixed(0)}%`);
+        },
+        (error) => {
+          console.error(error);
+          setUploadStatus("Upload failed: " + error.message, "#b91c1c");
+        },
+        async () => {
+          const downloadURL = await getDownloadURL(uploadTask.snapshot.ref);
+          setUploadStatus("Upload complete. Saving document record...", "#166534");
+
+          // Save to Firestore so it appears in your list:
+          // adjust collection name to match what you're using (e.g. "troopDocuments")
+          await addDoc(collection(db, "troopDocuments"), {
+            title: file.name,
+            url: downloadURL,
+            description: "",
+            createdAt: serverTimestamp ? serverTimestamp() : new Date(),
+            uploadedBy: currentUser ? currentUser.uid : null
+          });
+
+          setUploadStatus("Document saved and added to list.", "#166534");
+        }
+      );
+    } catch (err) {
+      console.error(err);
+      setUploadStatus("Upload error: " + err.message, "#b91c1c");
+    }
+  }
+
+      if (uploadDropzone && uploadFileInput) {
+    // Click to open file picker
+    uploadDropzone.addEventListener("click", () => {
+      uploadFileInput.click();
+    });
+
+    uploadFileInput.addEventListener("change", (e) => {
+      const file = e.target.files[0];
+      if (file) {
+        uploadFileToStorage(file);
+      }
+    });
+
+    // Drag & drop behavior
+    ["dragenter", "dragover"].forEach((eventName) => {
+      uploadDropzone.addEventListener(eventName, (e) => {
+        e.preventDefault();
+        e.stopPropagation();
+        uploadDropzone.style.background = "#eef2ff";
+      });
+    });
+
+    ["dragleave", "drop"].forEach((eventName) => {
+      uploadDropzone.addEventListener(eventName, (e) => {
+        e.preventDefault();
+        e.stopPropagation();
+        uploadDropzone.style.background = "#f9fafb";
+      });
+    });
+
+    uploadDropzone.addEventListener("drop", (e) => {
+      const files = e.dataTransfer.files;
+      if (files && files.length > 0) {
+        const file = files[0];
+        uploadFileToStorage(file);
+      }
+    });
+      }
 
     onAuthStateChanged(auth, handleAuth);
 
