--- a/public/documents/index.html
+++ b/public/documents/index.html
@@ -345,7 +345,7 @@
     </section>
   </main>
 
-  <!-- Pull in the JS we created -->
+  <!-- JS logic for this page -->
   <script type="module" src="/js/documents-page.js"></script>
 </body>
 </html>
