--- a/public/documents/index.html
+++ b/public/documents/index.html
@@ -260,6 +260,24 @@
       color: var(--text-muted);
       margin-top: 4px;
     }
+    #upload-status {
+      font-size: 12px;
+      margin-top: 6px;
+      color: var(--text-muted);
+    }
+    /* Drag & drop box */
+    #upload-dropzone {
+      border: 2px dashed rgba(148,163,184,0.9);
+      border-radius: 12px;
+      padding: 18px;
+      background: #f9fafb;
+      text-align: center;
+      cursor: pointer;
+      margin-bottom: 10px;
+    }
+    #upload-dropzone.highlight {
+      background: #eef2ff;
+    }
   </style>
 </head>
 <body>
@@ -295,57 +313,409 @@
       </div>
     </div>
 
-    <section>
-      <h2>Manage & View Documents</h2>
+    <!-- Admin-only upload section -->
+    <section class="admin-only">
+      <h2>Upload New Document (Admins Only)</h2>
 
-      <!-- Drag & drop upload -->
-      <div class="admin-only" style="margin-bottom: 14px;">
-        <h3>Upload a File</h3>
-        <div id="upload-dropzone"
-             style="border: 2px dashed rgba(148,163,184,0.9);
-                    border-radius: 12px;
-                    padding: 18px;
-                    background: #f9fafb;
-                    text-align: center;
-                    cursor: pointer;">
-          <p style="margin: 0 0 4px; font-size: 14px;">
-            Drag & drop PDFs, images, or other files here
-          </p>
-          <p style="margin: 0; font-size: 12px; color: #6b7280;">
-            or click to choose a file from your device
-          </p>
-          <p id="upload-status" style="margin-top: 6px; font-size: 12px; color: #6b7280;"></p>
-        </div>
-        <input type="file" id="upload-file-input" style="display:none;" />
+      <!-- Drag & drop or click -->
+      <div id="upload-dropzone">
+        <p style="margin:0 0 4px;font-size:14px;">
+          <strong>Drag & drop</strong> a file here
+        </p>
+        <p style="margin:0;font-size:12px;color:#6b7280;">
+          or click to choose from your device (max ~20 MB)
+        </p>
+        <p id="chosen-file" style="margin-top:6px;font-size:12px;color:#6b7280;"></p>
       </div>
+      <input type="file" id="upload-file-input" style="display:none;" />
 
-      <!-- Add by URL -->
-      <form id="add-doc-form" class="admin-only">
-        <h3>Add Document by Link</h3>
+      <form id="upload-form">
         <div class="field">
-          <label for="doc-title">Title</label>
-          <input id="doc-title" type="text" required />
-        </div>
-        <div class="field">
-          <label for="doc-url">Document URL</label>
-          <input id="doc-url" type="url" placeholder="https://..." required />
+          <label for="doc-title">Title (optional)</label>
+          <input id="doc-title" type="text" placeholder="If blank, file name will be used" />
         </div>
         <div class="field">
           <label for="doc-desc">Description (optional)</label>
           <textarea id="doc-desc" placeholder="Short description of this document"></textarea>
         </div>
-        <button type="submit">Add Document</button>
+        <button type="submit">Upload Document</button>
         <div class="small-help">
-          Use this for existing files (e.g., Google Drive links).
+          This uploads the file to Firebase Storage and saves a record in Firestore.
         </div>
+        <div id="upload-status"></div>
       </form>
 
+      <form id="add-link-form" style="margin-top:10px;">
+        <h3>Add Document by Link</h3>
+        <div class="field">
+          <label for="link-title">Title</label>
+          <input id="link-title" type="text" required />
+        </div>
+        <div class="field">
+          <label for="link-url">Document URL</label>
+          <input id="link-url" type="url" placeholder="https://..." required />
+        </div>
+        <div class="field">
+          <label for="link-desc">Description (optional)</label>
+          <textarea id="link-desc" placeholder="Short description of this document"></textarea>
+        </div>
+        <button type="submit">Add Linked Document</button>
+        <div class="small-help">
+          Use this if the file is hosted elsewhere (e.g., Google Drive, BSA national).
+        </div>
+      </form>
+    </section>
+
+    <!-- All users see this -->
+    <section>
+      <h2>Available Documents</h2>
       <ul id="docs-list" class="doc-list"></ul>
       <div id="docs-empty" class="empty-text">No documents added yet.</div>
     </section>
   </main>
 
-  <!-- JS logic for this page -->
-  <script type="module" src="/js/documents-page.js"></script>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import {
+      getAuth,
+      onAuthStateChanged,
+      signOut
+    } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+    import {
+      getFirestore,
+      doc,
+      getDoc,
+      collection,
+      addDoc,
+      deleteDoc,
+      onSnapshot,
+      orderBy,
+      serverTimestamp,
+      query
+    } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+    import {
+      getStorage,
+      ref,
+      uploadBytesResumable,
+      getDownloadURL
+    } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-storage.js";
+
+    // Your Firebase config (with Storage)
+    const firebaseConfig = {
+      apiKey: "AIzaSyD5qUHa2JuQ3iI7U3DrX7JDyhx76PGzhxM",
+      authDomain: "troop-248.firebaseapp.com",
+      projectId: "troop-248",
+      storageBucket: "troop-248.firebasestorage.app",
+      messagingSenderId: "925363875752",
+      appId: "1:925363875752:web:0b001c1a7a09fb8232f79d",
+      measurementId: "G-NY75GX5TBH"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
+    const storage = getStorage(app);
+
+    // DOM elements
+    const authInfoEl = document.getElementById("auth-info");
+    const logoutBtn = document.getElementById("logout-btn");
+    const roleBadgeContainer = document.getElementById("role-badge-container");
+    const adminOnlyEls = document.getElementsByClassName("admin-only");
+
+    const docsList = document.getElementById("docs-list");
+    const docsEmptyEl = document.getElementById("docs-empty");
+
+    const uploadDropzone = document.getElementById("upload-dropzone");
+    const uploadFileInput = document.getElementById("upload-file-input");
+    const chosenFileEl = document.getElementById("chosen-file");
+    const uploadForm = document.getElementById("upload-form");
+    const titleInput = document.getElementById("doc-title");
+    const descInput = document.getElementById("doc-desc");
+    const uploadStatusEl = document.getElementById("upload-status");
+
+    const addLinkForm = document.getElementById("add-link-form");
+    const linkTitleInput = document.getElementById("link-title");
+    const linkUrlInput = document.getElementById("link-url");
+    const linkDescInput = document.getElementById("link-desc");
+
+    let currentUser = null;
+    let currentIsAdmin = false;
+    let currentFile = null;
+
+    function setUploadStatus(text, color = "#6b7280") {
+      if (!uploadStatusEl) return;
+      uploadStatusEl.textContent = text;
+      uploadStatusEl.style.color = color;
+      console.log("UPLOAD STATUS:", text);
+    }
+
+    function updateAdminUI() {
+      for (let i = 0; i < adminOnlyEls.length; i++) {
+        adminOnlyEls[i].style.display = currentIsAdmin ? "block" : "none";
+      }
+      if (currentUser) {
+        authInfoEl.textContent = `Signed in as ${currentUser.email}`;
+        roleBadgeContainer.innerHTML = `
+          <span class="badge ${currentIsAdmin ? "admin" : ""}">
+            ${currentIsAdmin ? "Admin" : "Viewer"}
+          </span>`;
+      }
+    }
+
+    async function handleAuth(user) {
+      if (!user) {
+        window.location.href = "/";
+        return;
+      }
+
+      const infoRef = doc(db, "accountInfo", user.uid);
+      const infoSnap = await getDoc(infoRef);
+
+      if (!infoSnap.exists()) {
+        window.location.href = "/under-review/";
+        return;
+      }
+
+      const data = infoSnap.data();
+      const role = data.authRole;
+
+      if (role !== "admin" && role !== "viewer") {
+        window.location.href = "/under-review/";
+        return;
+      }
+
+      currentUser = user;
+      currentIsAdmin = role === "admin";
+      updateAdminUI();
+      initDocumentsPage();
+    }
+
+    onAuthStateChanged(auth, handleAuth);
+
+    logoutBtn.addEventListener("click", async () => {
+      await signOut(auth);
+      window.location.href = "/";
+    });
+
+    function renderDocs(docs) {
+      docsList.innerHTML = "";
+      if (docs.length === 0) {
+        docsEmptyEl.style.display = "block";
+        return;
+      }
+      docsEmptyEl.style.display = "none";
+
+      docs.forEach((snap) => {
+        const data = snap.data();
+        const li = document.createElement("li");
+        li.className = "doc-item";
+
+        const title = data.title || "Untitled Document";
+        const url = data.url || "#";
+        const desc = data.description || "";
+        const createdAt = data.createdAt
+          ? data.createdAt.toDate().toLocaleString()
+          : "";
+
+        li.innerHTML = `
+          <div class="doc-title">${title}</div>
+          <div><a href="${url}" target="_blank" rel="noopener noreferrer" class="doc-link">${url}</a></div>
+          <div class="doc-meta">
+            ${desc ? desc + " • " : ""}${createdAt ? "Added " + createdAt : ""}
+          </div>
+        `;
+
+        if (currentIsAdmin) {
+          const btn = document.createElement("button");
+          btn.textContent = "Delete";
+          btn.className = "small-btn";
+          btn.onclick = async () => {
+            if (confirm("Delete this document?")) {
+              await deleteDoc(doc(db, "troopDocuments", snap.id));
+            }
+          };
+          li.appendChild(btn);
+        }
+
+        docsList.appendChild(li);
+      });
+    }
+
+    function initDocumentsPage() {
+      // Live docs list
+      const qDocs = query(
+        collection(db, "troopDocuments"),
+        orderBy("createdAt", "desc")
+      );
+      onSnapshot(qDocs, (snapshot) => {
+        renderDocs(snapshot.docs);
+      });
+
+      // Admin-only upload features
+      if (currentIsAdmin) {
+        // Click dropzone to open file picker
+        uploadDropzone.addEventListener("click", () => {
+          uploadFileInput.click();
+        });
+
+        uploadFileInput.addEventListener("change", (e) => {
+          const file = e.target.files[0];
+          if (file) {
+            currentFile = file;
+            chosenFileEl.textContent =
+              "Selected: " +
+              file.name +
+              " (" +
+              Math.round(file.size / 1024) +
+              " kB)";
+            setUploadStatus("Ready to upload.");
+          }
+        });
+
+        // Drag & drop
+        ["dragenter", "dragover"].forEach((eventName) => {
+          uploadDropzone.addEventListener(eventName, (e) => {
+            e.preventDefault();
+            e.stopPropagation();
+            uploadDropzone.classList.add("highlight");
+          });
+        });
+
+        ["dragleave", "drop"].forEach((eventName) => {
+          uploadDropzone.addEventListener(eventName, (e) => {
+            e.preventDefault();
+            e.stopPropagation();
+            uploadDropzone.classList.remove("highlight");
+          });
+        });
+
+        uploadDropzone.addEventListener("drop", (e) => {
+          const files = e.dataTransfer.files;
+          if (files && files.length > 0) {
+            currentFile = files[0];
+            chosenFileEl.textContent =
+              "Selected: " +
+              currentFile.name +
+              " (" +
+              Math.round(currentFile.size / 1024) +
+              " kB)";
+            setUploadStatus("Ready to upload.");
+          }
+        });
+
+        // Upload form submit
+        uploadForm.addEventListener("submit", async (e) => {
+          e.preventDefault();
+
+          if (!currentFile) {
+            setUploadStatus("Please choose or drop a file first.", "#b91c1c");
+            return;
+          }
+
+          const customTitle = titleInput.value.trim();
+          const title = customTitle || currentFile.name;
+          const description = descInput.value.trim();
+
+          const maxSizeBytes = 20 * 1024 * 1024; // 20 MB
+          if (currentFile.size > maxSizeBytes) {
+            setUploadStatus("File too large (max 20 MB).", "#b91c1c");
+            return;
+          }
+
+          try {
+            const cleanName = currentFile.name.replace(/[^\w.\-]+/g, "_");
+            const path =
+              "documents/" +
+              currentUser.uid +
+              "/" +
+              Date.now() +
+              "_" +
+              cleanName;
+            const storageRef = ref(storage, path);
+
+            setUploadStatus("Starting upload to: " + path);
+
+            const uploadTask = uploadBytesResumable(storageRef, currentFile);
+
+            uploadTask.on(
+              "state_changed",
+              (snapshot) => {
+                const progress =
+                  (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
+                setUploadStatus("Uploading... " + progress.toFixed(0) + "%");
+              },
+              (error) => {
+                console.error("UPLOAD ERROR:", error);
+                setUploadStatus("Upload failed: " + error.message, "#b91c1c");
+              },
+              async () => {
+                try {
+                  const url = await getDownloadURL(uploadTask.snapshot.ref);
+                  setUploadStatus(
+                    "Upload complete. Saving document record...",
+                    "#166534"
+                  );
+
+                  await addDoc(collection(db, "troopDocuments"), {
+                    title,
+                    url,
+                    description,
+                    createdAt: serverTimestamp(),
+                    uploadedBy: currentUser ? currentUser.uid : null,
+                    storagePath: path
+                  });
+
+                  setUploadStatus(
+                    "Document saved and added to list.",
+                    "#166534"
+                  );
+                  // Reset form
+                  currentFile = null;
+                  uploadFileInput.value = "";
+                  chosenFileEl.textContent = "";
+                  titleInput.value = "";
+                  descInput.value = "";
+                } catch (err) {
+                  console.error("FIRESTORE SAVE ERROR:", err);
+                  setUploadStatus(
+                    "Saved to Storage but Firestore failed: " + err.message,
+                    "#b91c1c"
+                  );
+                }
+              }
+            );
+          } catch (err) {
+            console.error("UPLOAD OUTER ERROR:", err);
+            setUploadStatus("Upload error: " + err.message, "#b91c1c");
+          }
+        });
+
+        // Add document by URL (no upload)
+        addLinkForm.addEventListener("submit", async (e) => {
+          e.preventDefault();
+          const title = linkTitleInput.value.trim();
+          const url = linkUrlInput.value.trim();
+          const description = linkDescInput.value.trim();
+
+          if (!title || !url) {
+            alert("Please fill out title and URL.");
+            return;
+          }
+
+          await addDoc(collection(db, "troopDocuments"), {
+            title,
+            url,
+            description,
+            createdAt: serverTimestamp(),
+            uploadedBy: currentUser ? currentUser.uid : null
+          });
+
+          linkTitleInput.value = "";
+          linkUrlInput.value = "";
+          linkDescInput.value = "";
+        });
+      }
+    }
+  </script>
 </body>
 </html>
