--- a/public/documents/index.html
+++ b/public/documents/index.html
@@ -519,7 +519,22 @@
 
         li.innerHTML = `
           <div class="doc-title">${title}</div>
-          <div><a href="${url}" target="_blank" rel="noopener noreferrer" class="doc-link">${url}</a></div>
+          const fileName =
+  data.title ||
+  decodeURIComponent(url.split('/').pop().split('?')[0]);
+
+li.innerHTML = `
+  <div class="doc-title">${fileName}</div>
+  <div>
+    <a href="${url}" target="_blank" rel="noopener noreferrer" class="doc-link">
+      Open File
+    </a>
+  </div>
+  <div class="doc-meta">
+    ${desc ? desc + " • " : ""}${createdAt ? "Added " + createdAt : ""}
+  </div>
+`;
+
           <div class="doc-meta">
             ${desc ? desc + " • " : ""}${createdAt ? "Added " + createdAt : ""}
           </div>
