--- a/public/events/index.html
+++ b/public/events/index.html
@@ -280,6 +280,13 @@
       margin-top: 6px;
     }
 
+    .event-map-container {
+  margin-top: 12px;
+  overflow: hidden;
+  border-radius: 12px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.06);
+}
+
     /* Events list */
 
     .events-list {
