--- a/public/events/event/index.html
+++ b/public/events/event/index.html
@@ -524,6 +524,7 @@
       <p class="small-help">
         Location and quick access tools for this outing.
       </p>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5959.566002854731!2d-81.4690029!3d28.472352899999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e77edfac4210bd%3A0x1adc62268ae9b19!2sUniversal%20Orlando%20Resort!5e1!3m2!1sen!2sus!4v1767757682805!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       <div class="btn-row">
         <a id="maps-btn" href="#" target="_blank" rel="noopener noreferrer"
            class="btn-chip btn-outlined" style="display:none;">
